add: createNewUser & FindUserById method in controller
