# apps/backend/user-service/src/controllers/user.controller.ts
@@ -1,22 +1,51 @@
-import { UserProfileResponse } from 'ms-libs/types';
+import { UserProfileError, UserProfileResponse, UserCreationParams } from 'ms-libs/types';
 import {
   Controller,
   Get,
+  Post,
   Path,
   Route,
+  SuccessResponse,
+  Body
 } from "tsoa";
+import UserService from '@/src/services/user.service';
 
 
-@Route("users")
+@Route("v1/users")
 export class UsersController extends Controller {
   @Get("{userId}")
-  public getUser(
+  public async getUser(
     @Path() userId: string
-  ): UserProfileResponse {
-    return {
-      id: userId,
-      email: "sokritha.it@gmail.com",
-      username: "sokritha"
-    };
+  ): Promise<UserProfileResponse | UserProfileError> {
+    try {
+      const user = await UserService.getUserById(userId);
+      return {
+        id: user._id.toString(),
+        email: user.email,
+        username: user.username,
+      };
+    } catch (error) {
+      this.setStatus(404); // Set HTTP status code to 404
+      return { message: 'failed', error: "not found" };
+    }
+  }
+
+  @SuccessResponse("201", "Created") // Custom success response
+  @Post()
+  public async createUser(
+    @Body() requestBody: UserCreationParams
+  ): Promise<UserProfileResponse | UserProfileError> {
+    try {
+      this.setStatus(201); // set return status 201
+      const newUser = await UserService.createNewUser(requestBody);
+
+      return {
+        id: newUser._id.toString(),
+        email: newUser.email,
+        username: newUser.username
+      }
+    } catch (error) {
+      throw error;
+    }
   }
 }
